--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "litipk/doctrine-mongodb-jiffy",
     "description": "Type adapter for Jiffy's Universal Timestamps on Doctrine MongoDB ODM",
-    "require": {
+    "require":
+        "php": ">=5.5.0", {
         "litipk/php-jiffy": "1.1.0"
     },
     "license": "MIT",
@@ -11,5 +12,15 @@
             "email": "castarco@litipk.com"
         }
     ],
+    "support": {
+        "email": "castarco@litipk.com",
+	"issues": "http://github.com/Litipk/doctrine-mongodb-jiffy/issues",
+	"source": "http://github.com/Litipk/doctrine-mongodb-jiffy"
+    },
+    "autoload": {
+        "psr-4": {
+            "Litipk\\Jiffy\\Doctrine\\ODM\\MongoDB\\": "src/"
+        }
+    },
     "minimum-stability": "stable"
 }
