--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Type adapter for Jiffy's Universal Timestamps on Doctrine MongoDB ODM",
     "require": {
         "php": ">=5.5.0",
-        "litipk/php-jiffy": "1.1.0",
-        "doctrine/mongodb-odm": "~1.0,>=1.0.2"
+        "litipk/php-jiffy": "^1.2",
+        "doctrine/mongodb-odm": "^1.0"
     },
     "license": "MIT",
     "authors": [
@@ -15,8 +15,8 @@
     ],
     "support": {
         "email": "castarco@litipk.com",
-	"issues": "http://github.com/Litipk/doctrine-mongodb-jiffy/issues",
-	"source": "http://github.com/Litipk/doctrine-mongodb-jiffy"
+        "issues": "http://github.com/Litipk/doctrine-mongodb-jiffy/issues",
+        "source": "http://github.com/Litipk/doctrine-mongodb-jiffy"
     },
     "autoload": {
         "psr-4": {
